5/20
intial version
Planning and beginning to assemble bare bones blog system

5/22
Some reorganizing and beginning to write posts to file

5/23
Used Gordon's post writing code. Rewrote it to have smarter formatting
Improved post display by including usernames

5/24
Added a post ID system as well as beginning to implement commenting

5/25
Beginning to read in files

5/26
Rewrote entire project to use objects. Much cleaner and comment system working.
Log out buttons implemented

5/27
Started implementing the up/downvote system. 
Major bugs came about in regard to the writing of the post objects.
After 3 hours, I resolved it. It was due to me confusing types of the
variables (I wish there was explicit typing!).
Buttons have been reworked into links so more than one variable can be 
passed into the url (Gordon's idea).